# pi-audio-client

./: .gitignore  CODE_REVIEW.md  README.md  config.yaml.example  pyproject.toml  requirements.txt
config/: pi-audio-client.service
docs/: final-wiring.md  hardware.md  interaction-design.md  quick-test-guide.md  ready-to-test.md  wiring-updated.md  wiring.md
gateway-patches/: README.md  config.patch  pi.py  run.patch
scripts/: quick_test.py
src/: __init__.py  main.py
src/audio/: __init__.py  input.py  output.py
src/client/: __init__.py  hermes_client.py
src/config/: __init__.py  settings.py
src/gpio/: __init__.py  buttons.py  led.py  taps.py
tests/: __init__.py  test_config.py  test_gpio.py  test_ptt_flow.py  test_quick.py
